--- a/Class_Notes/2019/Algebra/sections/2019-08-20.md
+++ b/Class_Notes/2019/Algebra/sections/2019-08-20.md
@@ -55,7 +55,7 @@ $S_{3}$ is the symmetries of a triangle (see notes).
 The symmetries of a square are *not* given by $S_{4}$, it is instead $D_{4}$ (see notes).
 
 ## Orbits
-Permutations $S_{A}$ "acts" on $A$, and if $\sigma \in S_{A}$, then $\generators{\sigma}$ also acts on $A$.
+Permutations $S_{A}$ *act* on $A$, and if $\sigma \in S_{A}$, then $\generators{\sigma}$ also acts on $A$.
 
 Define $a \sim b$ iff there is some $n$ such that $\sigma^{n}(a) = b$. This is an equivalence relation, and thus induces a partition of $A$. See notes for diagram. The equivalence classes under this relation are called the *orbits* under $\sigma$.
 
@@ -104,7 +104,7 @@ A group $G$ is said to *act* on a set $X$ if there exists a map $G\cross X \to X
 1. $e\actson x = x$
 2. $(g_{1} g_{2})\actson x = g_{1} \actson (g_{2} \actson x)$.
 
-Examples:
+*Examples:*
 
 1. $G = S_{A} \actson A$
 2. $H \leq G$, then $G \actson X = G/H$ where $g \actson xH = (gx)H$.
@@ -116,7 +116,7 @@ $$
 G_{x} = \theset{g\in G \suchthat g\actson x = x} \leq G
 $$
 
-We can also look at the dual thing,
+We can also look at the dual notion,
 $$
 X_{g} = \theset{x\in X \suchthat g\actson x = x}.
 $$
@@ -143,6 +143,6 @@ Exercise: Show that this is well-defined, so if 2 elements are equal then they g
 Exercise: Show that this is surjective.
 
 Injectivity: $\psi(g_{1} x) = \psi(g_{2} x)$, so $g_{1} Gx = g_{2} Gx$ and $(g_{2}\inv g_{1}) Gx = Gx$ so $g_{2}\inv g_{1} \in Gx \iff g_{2}\inv g_{1} \actson x = x \iff g_{1}x = g_{2} x$.
-
+$\qed$
 
 Next time: Burnside's theorem, proving the Sylow theorems.
