--- a/Class_Notes/2019/Algebra/sections/2019-09-12.md
+++ b/Class_Notes/2019/Algebra/sections/2019-09-12.md
@@ -17,7 +17,7 @@ It suffices to construct $\alpha \pm \beta, \alpha\beta, \alpha / \beta$.
 
 Showing $\pm$ and inverses is relatively easy. Showing closure under products:
 
-[Image](figures/2019-09-17-09:48.png)
+![Image](figures/2019-09-17-09:48.png)\
 
 **Corollary:** 
 $\QQ \leq \mathcal C$ is a subfield.
