--- a/Class_Notes/2019/Algebra/sections/2019-10-08.md
+++ b/Class_Notes/2019/Algebra/sections/2019-10-08.md
@@ -117,7 +117,7 @@ Thus $K$ is normal over $E$.
 
 *Proof of (2):*
 
-[Image](figures/2019-10-08-10:35.png)
+![Image](figures/2019-10-08-10:35.png)\
 
 So this follows by definition.
 
