--- a/Class_Notes/2019/Algebra/sections/2019-10-15.md
+++ b/Class_Notes/2019/Algebra/sections/2019-10-15.md
@@ -55,7 +55,7 @@ An 11-gon. Noting that $[\QQ(\zeta_{11}) : \QQ] = 10 \neq 2^\ell$, the 11-gon is
 
 Since this is only a sufficient condition, we'll refine this.
 
-*Definition:*
+**Definition:**
 A prime of the form $p = 2^{2^k}+1$ are called *Fermat primes*.
 
 **Theorem:**
