--- a/Class_Notes/2019/Algebra/sections/2019-10-22.md
+++ b/Class_Notes/2019/Algebra/sections/2019-10-22.md
@@ -67,7 +67,7 @@ We want to combine the following two notions:
 - Groups acting on sets, and
 - Vector spaces
 
-*Definition:*
+**Definition:**
 Let $R$ be a ring and $M$ an abelian group. Then if there is a map $R\cross M \to M$, written $(r,r) \mapsto rm$, such that $\forall s,r_1,r_2 \in R, m_1,m_2 \in M$, we have
 
 - $(sr_1 + r_2)(m_1 + m_2) = sr_1m_1 + sr_1m_2 + r_2m_1 + r_2 m_2$
