--- a/Class_Notes/2019/Algebra/sections/2019-11-21.md
+++ b/Class_Notes/2019/Algebra/sections/2019-11-21.md
@@ -117,7 +117,7 @@ Let $F$ be the free $k[x]$ module with basis $\theset{u_i}_{i=1}^n$, and define 
 
 \begin{align*}
 F \mapsvia{\pi} k^n \\
-u_i \mapsto e_i.
+u_i \mapsto e_i
 .\end{align*}
 
 Now define 
@@ -133,10 +133,10 @@ We then have $k^n \cong F/\ker \pi = F / \im \psi$, and since $k[x]$ is a PID, w
 
 \begin{align*}
 xI_n - A \sim D \definedas
-\begin{array}{cc}
+\left[\begin{array}{cc}
 L_r & 0 \\
 0 & 0
-\end{array}
+\end{array}\right]
 .\end{align*}
 
 
