--- a/Class_Notes/2019/Algebra/sections/2019-08-15.md
+++ b/Class_Notes/2019/Algebra/sections/2019-08-15.md
@@ -174,7 +174,7 @@ This generalizes the notion of a cyclic group, where we can simply intersect all
 
 We know what cyclic groups look like -- they are all isomorphic to $\ZZ$ or $\ZZ_n$. So now we'd like a structure theorem for abelian finitely generated groups.
 
-**Theorem**
+**Theorem**:
 Let $G$ be a finitely generated abelian group. Then
 $$G \cong \ZZ^r \times \displaystyle\prod_{i=1}^s \ZZ_{p_i^{\alpha _i}}$$
 for some finite $r,s \in \NN$ and $p_i$ are (not necessarily distinct) primes.
@@ -204,7 +204,7 @@ G/\ker \varphi \arrow[rruu, "\varphi'"]             &  &
 
 That is, $\varphi = \varphi' \circ \eta$, and $\varphi'$ is an isomorphism onto its image, so $G/\ker \varphi = \im \varphi$. This map is given by $\varphi'(g(\ker \varphi)) = \varphi(g)$.
 
-*Exercise*: Check that $\varphi$ is well-defined.
+> *Exercise*: Check that $\varphi$ is well-defined.
 
 ### The Second Theorem
 
