--- a/Class_Notes/2019/Algebra/sections/2019-10-01.md
+++ b/Class_Notes/2019/Algebra/sections/2019-10-01.md
@@ -20,7 +20,8 @@ Then $\overline F \cong \overline F'$.
 
 *Proof:*
 Take the identity $F \to F$ and lift it to some $\tau: \overline F \to E = \tau(\overline F)$ inside $\overline F '$.
-![Image](figures/2019-10-01-09:40.png)
+
+![Image](figures/2019-10-01-09:40.png)\
 
 Then $\tau(\overline F)$ is algebraically closed, and $\overline F' \geq \tau(\overline F)$ is an algebraic extension.
 But then $\overline F' = \tau(\overline F)$. $\qed$
@@ -29,7 +30,8 @@ But then $\overline F' = \tau(\overline F)$. $\qed$
 Let $E \geq F$ be an algebraic extension with $\alpha, \beta \in E$ conjugates. Then the conjugation isomorphism that sends $\alpha \to \beta$ can be extended to $E$. 
 
 *Proof:*
-![Image](figures/2019-10-01-09:45.png)
+
+![Image](figures/2019-10-01-09:45.png)\
 
 > Note: Any isomorphism needs to send algebraic elements to algebraic elements, and even more strictly, conjugates to conjugates.
 
@@ -39,7 +41,7 @@ Let $E \geq F$ be a finite extension. We want to count the number of isomorphism
 
 I.e., how many ways can we fill in the following diagram?
 
-![Image](figures/2019-10-01-09:51.png)
+![Image](figures/2019-10-01-09:51.png)\
 
 Let $G(E/F) \coloneqq \mathrm{Gal}(E/F)$; this will be a finite group if $[E: F] < \infty$.
 
@@ -109,7 +111,7 @@ Then all zeros of $f$ in $\overline F$ have the same multiplicity.
 Let $\alpha, \beta$ satisfy $f$, where $f$ is irreducible.
 Then consider the following lift:
 
-![Image](figures/2019-10-01-10:24.png)
+![Image](figures/2019-10-01-10:24.png)\
 
 This induces a map $F(\alpha)[x] \mapsvia{\tau} F(\beta)[x]$ which sends $\sum c_i x^i \mapsto \sum \psi(c_i) x^i$, so $x\mapsto x$ and $\alpha \mapsto \beta$, so $x\mapsto x$ and $\alpha \mapsto \beta$..
 
