--- a/Class_Notes/2019/Algebra/sections/2019-10-29.md
+++ b/Class_Notes/2019/Algebra/sections/2019-10-29.md
@@ -19,9 +19,9 @@ We say that two exact sequences are *isomorphic* if in the following diagram, $f
 ```{=latex}
 \begin{center}
 \begin{tikzcd}
-0 & M \arrow[dd, "f"] & N \arrow[dd, "g"] & Q \arrow[dd, "h"] & 0 \\
-  &                   &                   &                   &   \\
-0 & M                 & N                 & Q                 & 0
+0 \arrow[r] & M \arrow[dd, "f"] \arrow[r] & N \arrow[dd, "g"] \arrow[r] & Q \arrow[dd, "h"] \arrow[r] & 0 \\
+            &                             &                             &                             &   \\
+0 \arrow[r] & M \arrow[r]                 & N \arrow[r]                 & Q \arrow[r]                 & 0
 \end{tikzcd}
 \end{center}
 ```
@@ -40,14 +40,14 @@ We need to show that this diagram commutes:
 ```{=latex}
 \begin{center}
 \begin{tikzcd}
-0 & M_1 \arrow[dd, "id"] & M_2                               & M_3 \arrow[dd, "id"] & 0 \\
-	&                       &                                   &                       &   \\
-0 & M_1                   & M_1 \oplus M_3 \arrow[uu, "\phi"] & M_3                   & 0
+0 \arrow[r]    & M_1 \arrow[dd, "\id", latex'-latex',double,thin] \arrow[r] & M_1 \oplus M_3 \arrow[r]                               & M_3 \arrow[dd, "\id", latex'-latex',double,thin] \arrow[r] & 0 \\
+	             &                                &                                             &                                & \\
+0 \arrow[r]    & M_1 \arrow[r]                  & M_2 \arrow[uu, "\phi"'] \arrow[r] & M_3 \arrow[r]                  & 0
 \end{tikzcd}
 \end{center}
 ```
 
-We can check that $g\phi(m_1 + m_2) = g( f(m_1)) +  g(h(m_2)) = m_2 = \pi(m_1 + m_2)$.
+We can check that $(g\circ \phi)(m_1 + m_2) = g( f(m_1)) +  g(h(m_2)) = m_2 = \pi(m_1 + m_2)$.
 This yields $1 \implies 3$, and $2 \implies 3$ is similar.
 
 To see that $3 \implies 1, 2$, we attempt to define $k, h$ in the following diagram:
@@ -55,9 +55,9 @@ To see that $3 \implies 1, 2$, we attempt to define $k, h$ in the following diag
 ```{=latex}
 \begin{center}
 \begin{tikzcd}
-0 \arrow[r] & M_1 \arrow[dd, "\id"] & M_1 \oplus M_3 \arrow[l, "\pi_1"', bend right]    & M_3 \arrow[dd, "\id"] \arrow[l, "\iota_2"', bend right] \arrow[r] & 0 \\
+0 \arrow[r] & M_1 \arrow[r] \arrow[dd, "\id", latex'-latex',double,thin] & M_1 \oplus M_3 \arrow[r] \arrow[l, "\pi_1"', bend right]    & M_3 \arrow[dd, "\id", latex'-latex',double,thin] \arrow[l, "\iota_2"', bend right] \arrow[r] & 0 \\
 						&                       &                                                   &                                                                   &   \\
-0 \arrow[r] & M_1                   & M_2 \arrow[uu, "\phi"'] \arrow[l, "k", bend left] & M_3 \arrow[l, "h", bend left] \arrow[r]                           & 0
+0 \arrow[r] & M_1 \arrow[r]                   & M_2 \arrow[r] \arrow[uu, "\phi"'] \arrow[l, "k", bend left] & M_3 \arrow[r] \arrow[l, "h", bend left] \arrow[r]                           & 0
 \end{tikzcd}
 \end{center}
 ```
@@ -94,11 +94,13 @@ Then TFAE:
 
 
 ```{=latex}
+\begin{center}
 \begin{tikzcd}
 M \arrow[rrdd, "\exists! \tilde f", dotted] &  &   \\
                                             &  &   \\
 X \arrow[rr, "f"] \arrow[uu, "\iota", hook] &  & N
 \end{tikzcd}
+\end{center}
 ```
 
 **Definition:**
