--- a/Class_Notes/2019/Algebra/sections/2019-11-05.md
+++ b/Class_Notes/2019/Algebra/sections/2019-11-05.md
@@ -104,11 +104,13 @@ and since we've shown that $F$ is torsion-free, by the previous theorem $F$ is f
 Moreover, every SES with a free module in the right-hand slot splits.
 
 ```{=latex}
+\begin{center}
 \begin{tikzcd}
              &  &                &  &                    &  & X \arrow[dd, "\iota", hook] \arrow[lldd, "f", tail]          &  &   \\
              &  &                &  &                    &  &                                                              &  &   \\
 0 \arrow[rr] &  & M_t \arrow[rr] &  & M \arrow[rr, "f"'] &  & F \arrow[rr] \arrow[ll, "h" description, dotted, bend right] &  & 0
 \end{tikzcd}
+\end{center}
 ```
 
 For $X = \theset{x_j}$ a generating set of $F$, we can choose elements $\theset{y_i} \in \pi\inv(\iota(X))$ to construct a set map $f: X \to M$.
