--- a/Class_Notes/2019/Algebra/sections/2019-11-07.md
+++ b/Class_Notes/2019/Algebra/sections/2019-11-07.md
@@ -6,11 +6,13 @@ Today: Projective Modules
 A *projective* module $P$ over a ring $R$ is an $R\dash$module such that the following diagram commutes:
 
 ```{=latex}
+\begin{center}
 \begin{tikzcd}
                   &  & P \arrow[dd, "f"] \arrow[lldd, "\exists \phi", dashed] \\
                   &  &                                                        \\
 M \arrow[rr, "g"] &  & N                                                     
 \end{tikzcd}
+\end{center}
 ```
 
 i.e. there exists a $\phi: M \to N$ such that that $g \circ \phi = f$.
@@ -22,12 +24,14 @@ Every free module is projective.
 Suppose $M \surjects N \to 0$ and $F \mapsvia{f}$, so we have the following situation:
 
 ```{=latex}
+\begin{center}
 \begin{tikzcd}
                              &  & x \arrow[d, hook] \arrow[llddd, dotted]                &  &   \\
                              &  & F \arrow[dd, "f"] \arrow[lldd, "\exists \phi", dashed] &  &   \\
                              &  &                                                        &  &   \\
 M \arrow[rr, "g", two heads] &  & N \arrow[rr, dotted]                                   &  & 0
 \end{tikzcd}
+\end{center}
 ```
 
 For every $x\in X$, there exists an $m_x \in M$ such that $g(m_x) = f(i(x))$.
@@ -52,10 +56,12 @@ $a \implies b$:
 We set up the following situation, where $s$ is produced by the universal property:
 
 ```{=latex}
+\begin{center}
 \begin{tikzcd}
-            &             &                        & P \arrow[d, "\id", two heads, hook] \arrow[ld, "\exists s"] &   \\
-0 \arrow[r] & M \arrow[r] & N \arrow[r, two heads] & P \arrow[r]                                                 & 0
+               &             &                        & P \arrow[d, "\id", two heads, hook] \arrow[ld, "\exists s"] & \\
+0 \arrow[r]    & M \arrow[r] & N \arrow[r, two heads] & P \arrow[r]                                                 & 0
 \end{tikzcd}
+\end{center}
 ```
 
 $b \implies c$:
@@ -66,13 +72,15 @@ $c\implies a$:
 We have the following situation:
 
 ```{=latex}
+\begin{center}
 \begin{tikzcd}
-                        &  & F = P \oplus K \arrow[dd, "\pi", bend right] \arrow[lldddd, "\exists h", dotted]               \\
-                        &  &                                                                                                \\
-                        &  & P \arrow[uu, "\iota", bend right] \arrow[dd, "f"] \arrow[lldd, "\phi = \iota \circ h", dotted] \\
-                        &  &                                                                                                \\
-M \arrow[rr, two heads] &  & N                                                                                             
+&  & F = P \oplus K \arrow[dd, "\pi", bend right] \arrow[lldddd, "\exists h", dotted]               \\
+&  & \\
+&  & P \arrow[uu, "\iota", bend right] \arrow[dd, "f"] \arrow[lldd, "\phi = \iota \circ h", dotted] \\
+&  & \\
+M \arrow[rr, two heads]  &  & N
 \end{tikzcd}
+\end{center}
 ```
 
 By the previous argument, there exists an $h: F\to M$ such that $g\circ h = f \circ \pi$.
@@ -176,5 +184,5 @@ Then
 1. $T \in \hom_R(V, W)$ is an isomorphisms iff $[T]_{\beta_v, \beta_w}$ is invertible.
 2. $[T\inv]_{\beta_v, \beta_w} = [T]_{\beta_v, \beta_w}\inv$.
 
-*Definition:*
+**Definition:**
 We'll say that two matrices $A, B$ are *equivalent* iff there exist $P, Q$ invertible such that $PAQ = B$.
