/ ‘Class_Notes/2019/Lie Algebra/sections/2019-09-02.md’

--- a/Class_Notes/2019/Lie Algebra/sections/2019-09-02.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-09-02.md
@@ -3,7 +3,7 @@
 Recall the killing form:
 \[
 \begin{align*}
-\kappa: lieg^2 \to \FF \\
+\kappa: \lieg^2 \to \FF \\
 (x,y) \mapsto \mathrm{tr}(\ad_x \circ \ad_y)
 .\end{align*}
 \]
