--- a/Class_Notes/2019/Lie Algebra/sections/2019-08-30.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-08-30.md
@@ -1,121 +1,177 @@
-# Friday August 30
+# Monday September 30
 
-Review of bilinear forms: let $V = \FF^n$.
+Last time: 
+Let $\lieg$ be finite dimensional and $\lieh$ a maximal toral subalgebra.
 
-Definition: A bilinear form $\beta: V^2 \to \FF$ can be represented by a matrix $B$ with respect to a basis $\theset{\vector v_i}$ such that
-$$
-\beta \beta(\sum a_i \vector v_i, \sum b_i \vector v_i) = (a_1 ~a_2 ~\cdots) B (b_1 ~b_2 ~\cdots)
-$$
-
-
-- $\beta$ is *symmetric* iff $\beta(a,b) = \beta(b,a)$.
-- $\beta$ is *symplectic* iff $\beta(a, b) = -\beta(b, a)$.
-- $\beta$ is *isotropic*  iff $\beta(a, a) = 0$.
-
-For a subspace $U \leq V$, define
-$$
-U^\perp \coloneqq \theset{\vector v\in V \suchthat \beta(\vector u, \vector v) = \vector 0 ~\forall u\in U}.
-$$
-
-> Note: in general, left/right orthogonality are distinguished, but these will be identical when $\beta$ is symmetric/symplectic.
-
-The form $\beta$ is said to be *non-degenerate* iff $V^\perp = 0$ iff $\det B \neq 0$.
-
-Assume $F$ is an algebraically closed field, so $\overline F = F$, and $\mathrm{char} F \neq 2$, then
-
-- If $\beta$ is non-degenerate and symmetric, then $B \sim I_n$
-- If $\beta$ is non-degenerate and symplectic, then $B \sim [0, I_{n/2}; I_{n/2}, 0]$.
-
-Remark:
-
-$\lieso(n, \FF) = \theset{x\in \liegl(n, F) \suchthat \beta(x(u), v) = -\beta(u, x(v))}$, where $B$ has the matrix $[0, I; I, 0]$ if $n$ is odd, or this matrix with a 1 in the top-left corner if $n$ is odd.
-
-Similarly, $\mathfrak{sp}(2m, \FF)$ can be described this way with the matrix $[0, -I_m; -I_m, 0]$.
-
-Overview:
-The killing form is defined as $\kappa: \lieg^2 \to \FF$ where $\kappa(x, y) = \mathrm{tr}(\ad_x \circ \ad_y)$.
-
-Then we have **Cartan's Criteria**:
-
-- $\lieg$ solvable $\iff$ $\kappa(x,y) = 0 \forall x\in [\lieg, \lieg], y\in \lieg$.
-- $\lieg$ semisimple $\iff \kappa$ is non-degenerate.
-
-Note that if $\lieg$ is semisimple, then $\lieg = \bigoplus_i I_i$ with each $I_i \normal \lieg$ and simple.
-
-## Cartan's Criteria
-
-Some facts:
-
-1. $\kappa$ is symmetric
-2. If $\lieg$ is finite dimensional, then $\kappa$ is associative, i.e $\kappa([x,y], z) = \kappa(x, [y, z])$.
-
-Exercise: Show that if $I \normal \lieg$, then $I^\perp \leq \lieg$ is an ideal.
-
-Proof of (2):
-In section 4.3, it was shown that $\mathrm{tr}([a,b] \circ c) = \mathrm{tr}(a \circ [b, c])$ for all $a,b,c \in \mathrm{End}(V)$ (provided $V$ is finite dimensional).
-
-So
+Then $(\Phi, E)$ is a *root system*, and we obtain a bilinear product 
 \[
 \begin{align*}
-\kappa([x,y], z) &= \mathrm{tr}(\ad_{[x, y]} \circ \ad_z) \\
-&= \mathrm{tr}([\ad_x, \ad_y] \circ \ad_z) \\
-&= \mathrm{tr}(\ad_x \circ [\ad_y, \ad_z]) \\
-&= \mathrm{tr}(\ad_x \circ \ad_{[y, z]} ) \\
-&= \mathrm{tr}(x, [y, z]).
+\inner{\wait}{\wait}: E\cross E \to \RR \\
+(\alpha, \beta) \mapsto \kappa(t_\alpha, t_\beta)
+.\end{align*}
+\]
+Examples:
+$\lieg = \liesl(3, \CC)$ and $\lieh = \CC h_1 \oplus \CC h_2$ where
+
+Todo: Insert clip image h1, h2
+
+\[
+\begin{align*}
+\alpha_1: \lieh \to \CC \\
+h_1 \mapsto 2
+h_2 \mapsto -1
 .\end{align*}
 \]
 
-Theorem:
-$\lieg$ is semisimple iff $\kappa$ is nondegenerate.
+\[
+\begin{align*}
+\alpha_2: \lieh \to \CC \\
+h_1 \mapsto -1
+h_2 \mapsto 2
+.\end{align*}
+\]
+
+To find $t_{\alpha_i}$, we need to look at $\kappa\mid_\lieh$.
+
+Todo: Insert phone image
+
+Since we only need the trace, this suffice, and we find
+
+\[
+\begin{align*}
+\left.\begin{array}{c|cc}{h_{1}} & {h_{2}} \\ {h_{1}} & {12} & {-6} \\ {h_{2}} & {-6} & {12}\end{array}\right]
+.\end{align*}
+\]
+
+We then get $t_{\alpha_1} = \frac{h_1}{6}$ and $t_{\alpha_2} = \frac{h_2}{6}$. 
+Moreover
+\[
+\begin{align*}
+\inner{\alpha_1}{\alpha_1} = \kappa(t_{\alpha_1}, t_{\alpha_1}) = \frac 1 3 \in \QQ \\
+\inner{\alpha_1}{\alpha_1} = \frac 1 3 \\ 
+\inner{\alpha_1}{\alpha_2} = - \frac 1 6 \\
+\inner{\alpha_1}{\alpha_2\dual} = \frac{2\inner{\alpha_1}{\alpha_2}}{\inner{\alpha_2}{\alpha_2}} = -1 \in \ZZ
+\inner{\alpha_i}{\alpha_i\dual} = \frac{2\inner{\alpha_i}{\alpha_i}}{\inner{\alpha_i}{\alpha_i}} = 2 \in \ZZ
+.\end{align*}
+\]
+
+This leads to a nice fact: the matrix $\inner{\alpha_i}{\alpha_j\dual}$ has $\ZZ$ entries, and this is called the *Cartan matrix*.
+
+## Ch.3: Root Systems
+
+### Axiomatics: Reflections
+
+Fix a Euclidean space $E$.
+
+Definition:
+A *hyperplane* in $E$ is a subspace of codimension 1.
+A *reflection* in $E$ is an element $s\in \liegl(E)$ such that
+
+$$
+\theset{
+E^s \coloneqq \theset{x\in E \suchthat sx = s} \text{ is a hyperplane } H \text{ and } s(x) = -x\quad \forall x\in E \suchthat (x, H) = 0
+}$$
+
+For nonzero $\alpha\in E$, its reflection is
+\[
+\begin{align*}
+S_\alpha: E \to E \\
+\beta \mapsto \beta - \inner{\beta}{\alpha\dual}\alpha
+.\end{align*}
+\]
+
+with respect to $H_\alpha = \theset{x\in E \suchthat \inner{x}{\alpha} = 0}$, where $\alpha\dual = \frac{2\alpha}{\inner{\alpha}{\alpha}}$.
+
+Lemma:
+Let $\Phi \subseteq E$ be finite such that $S_\alpha(\Phi) = \Phi$ for all $\alpha \in \Phi$.
+
+Suppose that $S \in \liegl(E)$ satisfies
+
+1. $S(\Phi) = \Phi$,
+2. $S(h) = h$ for all $h\in H$, and
+3. $S(\alpha) = -\alpha$ for some $\alpha \in \Phi$,
+
+then $S = S_\alpha$, i.e. this uniquely characterizes $S$
 
 Proof:
-$\implies$: We want to show that $\lieg^\perp = 0$. Note that $[\lieg^\perp, \lieg^\perp] \subseteq \lieg$, and so for all $x\in [\lieg^\perp, \lieg^\perp]$ and for any $y\in \lieg^\perp$, we have
+
+
+Let $\tau = S \circ S_\alpha$.
+Then $\tau(\Phi) = \Phi$ and $\tau(\alpha) = \alpha$.
+This $\tau \actson \RR\alpha$ by 1, and similarly $\tau \actson E/\RR\alpha$ by 1 by picking a representative in $H$.
+Moreover, all eigenvalues of $\tau$ are 1.
+So the minimal polynomial of $\tau$ divides $(t-1)^{\dim E}$.
+
+We want to show that $\tau \divides (t-1)^N$ for some large $N$, which forces $\tau \divides \gcd((t-1)^{\dim E}, t^N - 1) = 1$.
+For any $\beta \in \Phi$ and $k > \abs{\Phi}$, not all vectors $\beta, \tau(\beta), \cdots \tau^k(\beta)$.
+So $\beta = \tau^{k_\beta}(\beta)$ for some $k_\beta$ depending on $\beta$ (noting that $\tau$ is invertible.)
+
+Multiplying all of these $k_\beta$s together, we can get some $k_\Phi$ that is larger than $\abs \Phi$, and so $\beta = \tau^{k_\Phi}$ for *all* $\beta \in \Phi$.
+But then $\tau^{k_\Phi} = 1$ in $\liegl(E)$.
+
+### Root Systems
+
+Definition:
+A subset $\Phi$ of $E$ a Euclidean space is called a *root system* iff
+
+1. $\abs \Phi < \infty, 0\not\in\Phi$, and $E = \bigoplus_{\alpha\in\Phi} \RR \alpha$
+2. $\alpha \in \phi \implies \CC \alpha \intersect \Phi = \theset{\pm \alpha}$
+3. $\alpha \in \Phi \implies S_\alpha(\Phi) = \Phi$
+4. $\alpha, \beta \in \Phi \implies \inner{\beta}{\alpha\dual} \in \ZZ$.
+
+
+Definition:
+The *rank* of a root system is the dimension on $E$.
+
+Definition:
+The *Weyl Group* of $\Phi$ is defined as 
 $$
-\kappa(x, y) = \mathrm{tr}(\ad_x \circ \ad_y) = 0
-$$
-by the const(?) of $\lieg^\perp$. This implies $\lieg^\perp$ is solvable.
-
-Using fact (2), we have $\lieg^\perp \normal \lieg$ and thus $\lieg^\perp \subseteq \mathrm{rad}(\lieg)$, which is 0 since because $\lieg$ is semisimple. 
-So either $\lieg^\perp = 0$ or $\kappa$ is nondegenerate.
-
-> Used the fact that the radical was a maximal solvable ideal.
-
-$\impliedby$: We want to show that for all $I \normal \lieg$ where $[I, I] = 0$, we have $I^\perp \subseteq \lieg^\perp$.
-
-For $x\in I, y\in \lieg$, we have
-$$
-(\ad_x \circ \ad_y)^2 = \lieg \mapsvia{\ad_y} \lieg \mapsvia{\ad_x} I \mapsvia{\ad_y} I \mapsvia{\ad_x} 0
+W = \generators{S_\alpha \mid \alpha \in \Phi} \subseteq \liegl(E)
 $$
 
-And thus $\mathrm{tr}(\ad_x \circ \ad_y) = 0$ and $I \subseteq \lieg^\perp$.
+Note that $W \injects \Sigma_{\abs \Phi}$, a permutation group of size $\abs \Phi$.
 
+Lemma:
+If $g \in \liegl(E)$ and $g(\Phi) = \Phi$, then for all $\alpha, \beta \in \Phi$, we have
+\[
+\begin{align*}
+g s_\alpha g\inv = s_{g(\alpha)}, \\
+\inner{\beta}{\alpha\dual} = \inner{g(\beta)}{g(\alpha)\dual},\\
+\inner{\beta}{\alpha\dual} = \inner{w(\beta)}{w(\alpha)\dual}\quad \forall w\in W
+.\end{align*}
+\]
 
-Suppose that $\lieg$ is *not* semisimple. Then there exists a solvable ideal $J \neq 0$ such that the last term $J^i$ in the derived series is an ideal $I \normal \lieg$ such that $[I, I] = 0$, forcing $J^i \subset \lieg^\perp = 0$, which is a contradiction.
+Proof: 
+Check 1-3 in Lemma 9.1.
 
-## Section 5.2
+Proof of 1:
+We have
+\[
+\begin{align*}
+g s_\alpha g\inv(g(\beta)) = g s_\alpha (\beta) \in g(\Phi) = \Phi \quad \forall \beta \in \Phi, \\
+.\end{align*}
+\]
 
-Theorem:
-If $\lieg$ is semisimple, then
+Proof of 2:
+We have
+\[
+\begin{align*}
+\theset{g(\beta) \suchthat \beta \in \Phi} = \Phi \implies g s_\alpha g\inv (\Phi) = \Phi \quad \forall h\in gH_\alpha \\
+.\end{align*}
+\]
+and so $gs_\alpha g\inv(h) = gg\inv(h) = h$, so $h$ is a fixed point of this map.
 
-a. There exist ideals $I_i \normal \lieg$ which are simple Lie algebras satisfying $\lieg = \bigoplus I_i$. Note that $[I_i, I_j] \subseteq I_i \intersect I_j = 0$, since direct summands intersect only trivially.
+Proof of 3:
+We have
+$gs_\alpha g\inv(g(\alpha) = gs_\alpha(\alpha) = -g(\alpha)$, and so $gs_\alpha g\inv = s_{g(\alpha)})$ by Lemma 9.1.
 
-b. Every simple $I \normal \lieg$ is one of these $I_i$.
-
-c. $\kappa_{I_i} = \restrictionof{\kappa_{\lieg}}{I_i \cross I_i}$, so
-
-![Image](figures/2019-09-06-09:48.png)
-
-Remark:
-$\lieg$ is semisimple $\iff \lieg = \bigoplus_i I_i$ for some simple Lie algebras $I_i$.
-
-$\impliedby$: For all $i, S \coloneqq \mathrm{rad} \lieg, I_i \normal I_i$ is a solvable ideal. This implies that it is 0, since $I_i$ is simple.
-
-By definition, simple Lie algebras are not abelian.
-
-Supposing that $S = I_i$, we would then have $[S. S] \neq 0$ since $[I_i, I_i] \neq 0$ by definition. But $[S, S] \neq S$ because $S$ is solvable, which says that $S$ is not simple (a contradiction).
-
-Note that $[\mathrm{rad}\lieg, \lieg] \subseteq \bigoplus [\mathrm{rad} \lieg, I_i] = 0$, which forces $\mathrm{rad}\lieg \subseteq Z(\lieg)$. Since $I_i$ is simple, $Z(I_i) = 0$ for all $i$. But $Z(\lieg) = \bigoplus Z(I_i) = 0$, and this forces $\mathrm{rad}(\lieg) \subseteq Z(\lieg) \implies \mathrm{rad}\lieg = 0$. So $\lieg$ is semisimple.
-
-Next time -- starting the representation theory with $\liesl(2, \FF)$.
+Finally, we have 
+\[
+\begin{align*}
+g s_\alpha g\inv (g(\beta)) = g(s_\alpha(\beta)) = g(\beta - \inner{\beta}{\alpha\dual}\alpha) = g(\beta) - \inner{\beta}{\alpha\dual}g(\alpha) \\
+= \\
+s_{g(\alpha)} = g(\beta) - \inner{g(\beta)}{g(\alpha)\dual}g(\alpha)
+.\end{align*}
+\]
 
 
