/ ‘Class_Notes/2019/Lie Algebra/sections/2019-11-20.md’

--- a/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
@@ -11,7 +11,7 @@ $$
 and $\mathrm{ch} L(\lambda) = \sum_{\mu \in \Lambda} \dim L(\lambda)_\mu e(\mu)$.
 
 We have the Kostant function $p(\lambda) = \# \theset{ (k_\alpha)_\alpha \mid -\lambda = \sum_{\alpha\in\Phi^+} k_\alpha \alpha  }$ 
-and the Weyl function $q = e_\pho \star \prod_{\alpha\in\Phi^+}(1 - e_{-\alpha}) = \prod_{\alpha\in\Phi^+} (e_{\alpha/2} - e_{-\alpha/2})$.
+and the Weyl function $q = e_\rho \star \prod_{\alpha\in\Phi^+}(1 - e_{-\alpha}) = \prod_{\alpha\in\Phi^+} (e_{\alpha/2} - e_{-\alpha/2})$.
 
 Lemma:
 $p\star e_\lambda = \mathrm{ch} M(\lambda)$, so $q \star \mathrm{ch} M(\lambda) = e_{\lambda + \rho}$ and $q \star p = e_\rho$.
