/ ‘Class_Notes/2019/Lie Algebra/sections/2019-08-12.md’

--- a/Class_Notes/2019/Lie Algebra/sections/2019-08-12.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-08-12.md
@@ -223,14 +223,14 @@ M = \left(\begin{array}{c|c}{0} & {I_{n}} \\ \hline {-I_{n}} & {0}\end{array}\ri
 The orthogonal algebra
 
 \begin{align*}
-  \lieso(2\ell, F) = \theset{A \in \liegl(2\ell, F)\suchthat MA-A^{T}M = 0} \text{ where } \\
-  M = \begin{cases}
-  \left(\begin{array}{l|l}
-  {1} & {0} \\ \hline
-  {0} & {\begin{array}{c|c}{0} & {I_{n}} \\\hline {-I_{n}} & {0}\end{array}}
-  \end{array}\right) & n=2\ell + 1 \text{ odd},\\ \\
-  \left(\begin{array}{c|c}{0} & {I_{n}} \\ \hline {-I_{n}} & {0}\end{array}\right) & \text{ else}.
-  \end{cases}
+\lieso(2\ell, F) = \theset{A \in \liegl(2\ell, F)\suchthat MA-A^{T}M = 0} \text{ where } \\
+M = \begin{cases}
+\left(\begin{array}{l|l}
+{1} & {0} \\ \hline
+{0} & {\begin{array}{c|c}{0} & {I_{n}} \\\hline {-I_{n}} & {0}\end{array}}
+\end{array}\right) & n=2\ell + 1 \text{ odd},\\ \\
+\left(\begin{array}{c|c}{0} & {I_{n}} \\ \hline {-I_{n}} & {0}\end{array}\right) & \text{ else}.
+\end{cases}
 \end{align*}
 
 \wrapenv{\End{definition}}
@@ -245,7 +245,10 @@ The orthogonal algebra
 - For type $C_{\ell}$, we have $\abs{}{\liesp(n, \FF)} = \ell^{2} + 2\left(\frac{\ell(\ell+1)}{2} \right )$, and so elements here
 
 \begin{align*}
-\left(\begin{array}{ll}{A} & {B=B^{t}} \\ {C = C^{t}} & {A^{t}}\end{array}\right)
+\left(\begin{array}{ll}
+{A} & {B=B^{t}} \\ 
+{C = C^{t}} & {A^{t}}
+\end{array}\right)
 .\end{align*}
 
 
@@ -255,36 +258,12 @@ The orthogonal algebra
 
 \begin{align*}
 \abs{}{\lieso(2\ell, \FF)}
-= \dim\theset{ \left(\begin{array}{ll}{A} & {B=-B^{t}} \\ {C = -C^{t}} & {-A^{t}}\end{array}\right)}
+= \dim\theset{ 
+\left(\begin{array}{ll}{A}
+ & {B=-B^{t}} \\ 
+{C = -C^{t}} & {-A^{t}}
+\end{array}\right)}
 ,\end{align*}
 
 which turns out to be $2\ell^{2}-\ell$.
 
-- For type $B_{\ell}$, we have $\dim{\lieso}(2\ell, \FF) = 2\ell^{2} -\ell+2\ell = 2\ell^{2} + \ell$, with elements of the form
-
-\begin{align*}
-\left(\begin{array}{c|cc}
-0 & M & N \\ \hline
--N^{t} & A & C=C^{t} \\
--M^{t} & B=B^{t} & -A^{t}
-\end{array}\right)
-.\end{align*}
-
-\wrapenv{\Begin{exercise}}
-Use the relation $MA =  A^{tM}$ to reduce restrictions on the blocks.
-\wrapenv{\End{exercise}}
-
-
-```{=latex}
-\begin{tikzcd}
-&&  & \lieso(6)             &  &                       \\
-&&  & \lieso(5) \arrow[rrd] &  &                       \\
-\liesl(4) \arrow[rrruu] & \liesl(2)^2 \arrow[rr] &  & \lieso(4)             &  & \liesp(4)             \\
-&&  & \lieso(3)             &  &                       \\
-& \liesl(2) \arrow[rru]  &  &                       &  & \liesp(2) \arrow[llu]
-\end{tikzcd}
-```
-
-\wrapenv{\Begin{theorem}}
-These are *all* of the isomorphisms between any of these types of algebras, in any dimension.
-\wrapenv{\End{theorem}}
