/ ‘Class_Notes/2019/Lie Algebra/sections/2019-11-06.md’

--- a/Class_Notes/2019/Lie Algebra/sections/2019-11-06.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-11-06.md
@@ -43,16 +43,16 @@ A $\lieg\dash$Module $M$ is a *highest weight module* of weight $\lambda$ if $M 
 Example:
 Consider $\liesl(2, \CC)$ and $L(\lambda)$, we have the following situation:
 
-```{=latex}
-\begin{tikzcd}
-0                                                                    \\
-v_0 \arrow[u, "e"', bend right] \arrow[d, "f"', bend right]          \\
-v_1 \arrow[u, "e"', bend right] \arrow[d, "f"', bend right]          \\
-v_2 \arrow[u, "e"', bend right] \arrow[d, "f"', bend right]          \\
-\vdots \arrow[d, "f"', bend right]                                   \\
-v_{-\lambda} \arrow[u, "e"', bend right] \arrow[d, "f"', bend right] \\
-\end{tikzcd}
-```
+<!--```{=latex}-->
+<!--\begin{tikzcd}-->
+<!--0                                                                    \\-->
+<!--v_0 \arrow[u, "e"', bend right] \arrow[d, "f"', bend right]          \\-->
+<!--v_1 \arrow[u, "e"', bend right] \arrow[d, "f"', bend right]          \\-->
+<!--v_2 \arrow[u, "e"', bend right] \arrow[d, "f"', bend right]          \\-->
+<!--\vdots \arrow[d, "f"', bend right]                                   \\-->
+<!--v_{-\lambda} \arrow[u, "e"', bend right] \arrow[d, "f"', bend right] \\-->
+<!--\end{tikzcd}-->
+<!--```-->
 
 
 Then a similar picture holds for $M(\lambda)$, thus $v_0$ is a maximal vector, and $L(\lambda), M(\lambda)$ are weight modules.
