--- a/Class_Notes/2019/Lie Algebra/sections/2019-11-06.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-11-06.md
@@ -70,6 +70,6 @@ e. If $M$ has a *unique* submodule, then $M$ has a unique simple quotient and $M
 f. Every non-zero homomorphic image of $M$ is a highest weight module of weight $\lambda$.
 
 Proof of (a):
-$M = U(\lieg)v^+$, which is in $\sum \CC f \ldots h \ldots e \ldots v^+$ where $e\ldots v^+ = 0$, which is in $\sum \CCC f \ldots v^+$.
+$M = U(\lieg)v^+$, which is in $\sum \CC f \ldots h \ldots e \ldots v^+$ where $e\ldots v^+ = 0$, which is in $\sum \CC f \ldots v^+$.
 
 
