--- a/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
@@ -40,13 +40,12 @@ Postponed.
 > $\mathrm{ch}$ are characters, $L(\lambda)$ is a Verma module.
 
 Remark: if we sum over $\mu \leq \lambda$, we obtain
-\[
+
 \begin{align*}
-\mathrm{ch} M(\lambda) &= \sum_{\mu \in W \cdot \lambda}a_{\lambda \mu} \mathrm{ch} L(\mu)$ \\
-\mathrm{ch} L(\lambda) &= \sum_{\mu \in W \cdot \lambda} b_{\lambda \mu} \mathrm{ch} M(\mu)$ 
+\mathrm{ch} M(\lambda) &= \sum_{\mu \in W \cdot \lambda} a_{\lambda \mu} \mathrm{ch} L(\mu) \\
+\mathrm{ch} L(\lambda) &= \sum_{\mu \in W \cdot \lambda} b_{\lambda \mu} \mathrm{ch} M(\mu) 
 &= \sum_{\W\cdot \lambda \in \lambda} c_{\lambda W} \mathrm{ch} M(w\cdot \lambda)
 .\end{align*}
-\]
 
 **Theorem (Weyl's Character Formula):**
 If $\lambda \in \Lambda^+$, then 
@@ -70,7 +69,6 @@ $$
 s_\alpha(q \star \mathrm{ch} L(\lambda)) = \sum_w c_{\lambda, s_\alpha w} e_{w(\lambda + \rho)}
 $$
 
-
 On the other hand, by part (c) of the lemma, we have 
 $$
 (s_\alpha \star \q) \star \mathrm{ch} L(\lambda) = -q \star \mathrm{ch} L(\lambda) = \sum_w -c_{\lambda, w} e_{w(\lambda+\rho)}$
@@ -79,7 +77,7 @@ $$
 which implies that $c_{\lambda, s_\alpha w} = -c_{\lambda, w}$ by comparing term-by-term, and thus $c_{\lambda, w} = (-1)^{\ell(w)}$ because $c_{\lambda e} = 1$.
 
 In particular, $q = q \star e(0) = q \star \mathrm{ch} L(0) = \sum_{w\in W} (-1)^{\ell(w)} e_{w(\rho)}$, and thus
-\[
+
 \begin{align*}
 \mathrm{ch} L(\lambda) = 
 \frac {
@@ -93,23 +91,23 @@ In particular, $q = q \star e(0) = q \star \mathrm{ch} L(0) = \sum_{w\in W} (-1)
 }{
 \sum_w (-1)^{\ell(w)} e(w \cdot 0)
 } .\end{align*}
-\]
+
 
 $\qed$
 
-Example: 
+*Example:* 
 For type $A1$, we have $W = \Sigma_2 = \thset{\mathbf{1}, s}$.
 Take $\lambda = 3$ under
-\[
+
 \begin{align*}
 \Lambda \equiv \ZZ \\
 \alpha_1 \to 2 \\
 w_1 = \rho \to 1
 ,\end{align*}
-\]
+
 
 from which we obtain 
-\[
+
 \begin{align*}
 \mathrm{ch} L(3) = 
 \frac {
@@ -121,7 +119,7 @@ e(\mathbf{1} \cdot 0) - e(s\cdot 0)
 \frac{e(3) - e(-5)}{e(0) - e(-2)} \\
 = e(3) + e(1) + e(-1) + e(-3) \quad\text{by long division}
 .\end{align*}
-\]
+
 **Corollary (Kostant's Dimension Formula):**
 
 If $\mu \leq \lambda \in \Lambda^+$, then 
@@ -174,5 +172,3 @@ $$
 $$
 
 where we can identify a number of terms, and then taking ratios yields Weyl's dimension formula.
-
-
