/ ‘Class_Notes/2019/Lie Algebra/sections/2019-11-20.md’

--- a/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
@@ -90,7 +90,8 @@ In particular, $q = q \star e(0) = q \star \mathrm{ch} L(0) = \sum_{w\in W} (-1)
 \sum_w (-1)^{\ell(w)} e(w\cdot \lambda) 
 }{
 \sum_w (-1)^{\ell(w)} e(w \cdot 0)
-} .\end{align*}
+} .
+\end{align*}
 
 
 $\qed$
