/ ‘Class_Notes/2019/Lie Algebra/sections/2019-11-20.md’

--- a/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
@@ -50,11 +50,7 @@ Remark: if we sum over $\mu \leq \lambda$, we obtain
 **Theorem (Weyl's Character Formula):**
 If $\lambda \in \Lambda^+$, then 
 $$
-\mathrm{ch} L(\lambda) = \frac{
-\sum_{w\in W} (-1)^{\ell(w)} e(w \cdot \lambda)
-}{
-\sum_{w\in W} (-1)^{\ell(w)} e(w\cdot 0)
-}
+\mathrm{ch} L(\lambda) = \frac{ \sum_{w\in W} (-1)^{\ell(w)} e(w \cdot \lambda) }{ \sum_{w\in W} (-1)^{\ell(w)} e(w\cdot 0) }
 $$
 
 *Proof*:
