/ ‘Class_Notes/2019/Lie Algebra/sections/2019-11-20.md’

--- a/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
@@ -39,3 +39,11 @@ Postponed.
 
 > $\mathrm{ch}$ are characters, $L(\lambda)$ is a Verma module.
 
+Remark: if we sum over $\mu \leq \lambda$, we obtain
+
+\begin{align*}
+\mathrm{ch} M(\lambda) &= \sum_{\mu \in W \cdot \lambda} a_{\lambda \mu} \mathrm{ch} L(\mu) \\
+\mathrm{ch} L(\lambda) &= \sum_{\mu \in W \cdot \lambda} b_{\lambda \mu} \mathrm{ch} M(\mu) \\
+&= \sum_{W\cdot \lambda \in \Lambda} c_{\lambda W} \mathrm{ch} M(w\cdot \lambda)
+.\end{align*}
+
