--- a/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
@@ -47,3 +47,8 @@ Remark: if we sum over $\mu \leq \lambda$, we obtain
 &= \sum_{W\cdot \lambda \in \Lambda} c_{\lambda W} \mathrm{ch} M(w\cdot \lambda)
 .\end{align*}
 
+**Theorem (Weyl's Character Formula):**
+If $\lambda \in \Lambda^+$, then 
+$$
+\mathrm{ch} L(\lambda) = \frac{ \sum_{w\in W} (-1)^{\ell(w)} e(w \cdot \lambda) }{ \sum_{w\in W} (-1)^{\ell(w)} e(w\cdot 0) }
+$$
