/ ‘Class_Notes/2019/Lie Algebra/sections/2019-11-20.md’

--- a/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
@@ -57,7 +57,7 @@ $$
 
 We have $\mathrm{ch} L(\lambda) = \sum_{w} c_{\lambda w} \mathrm{ch} M(w\cdot \lambda)$, and so by the lemma, 
 $$
-q \ast \mathrm{ch} L(\lambda) = \sum c_{\lambda w} q \star \mathrm{ch} M(W(\lambda + \rho) - \rho)$ = \sum_w c_{\lambda w} e_{W(\lambda + p)}
+q \ast \mathrm{ch} L(\lambda) = \sum c_{\lambda w} q \star \mathrm{ch} M(W(\lambda + \rho) - \rho) = \sum_w c_{\lambda w} e_{W(\lambda + p)}
 $$
 
 Thus for all $\alpha \in \Phi^+$, we have
