/ ‘Class_Notes/2019/Lie Algebra/sections/2019-11-20.md’

--- a/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
@@ -93,7 +93,7 @@ In particular, $q = q \star e(0) = q \star \mathrm{ch} L(0) = \sum_{w\in W} (-1)
 $\qed$
 
 *Example:* 
-For type $A1$, we have $W = \Sigma_2 = \thset{\mathbf{1}, s}$.
+For type $A1$, we have $W = \Sigma_2 = \theset{\mathbf{1}, s}$.
 Take $\lambda = 3$ under
 
 \begin{align*}
