/ ‘Class_Notes/2019/Lie Algebra/sections/2019-11-20.md’

--- a/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
@@ -66,9 +66,9 @@ s_\alpha(q \star \mathrm{ch} L(\lambda)) = \sum_w c_{\lambda, s_\alpha w} e_{w(\
 $$
 
 On the other hand, by part (c) of the lemma, we have 
-<!--$$-->
-<!--(s_\alpha \star q) \star \mathrm{ch} L(\lambda) = -q \star \mathrm{ch} L(\lambda) = \sum_w -c_{\lambda, w} e_{w(\lambda+\rho)}$-->
-<!--$$-->
+$$
+(s_\alpha \star q) \star \mathrm{ch} L(\lambda) 
+$$
 
 which implies that $c_{\lambda, s_\alpha w} = -c_{\lambda, w}$ by comparing term-by-term, and thus $c_{\lambda, w} = (-1)^{\ell(w)}$ because $c_{\lambda e} = 1$.
 
