/ ‘Class_Notes/2019/Lie Algebra/sections/2019-11-20.md’ / ‘Class_Notes/2019/Lie Algebra/sections/2019-11-20.pdf’

--- a/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-11-20.md
@@ -69,6 +69,7 @@ On the other hand, by part (c) of the lemma, we have
 $$
 (s_\alpha \star q) \star \mathrm{ch} L(\lambda) 
 = -q \star \mathrm{ch} L(\lambda) 
+= \sum_w -c_{\lambda, w} e_{w(\lambda+\rho)}
 $$
 
 which implies that $c_{\lambda, s_\alpha w} = -c_{\lambda, w}$ by comparing term-by-term, and thus $c_{\lambda, w} = (-1)^{\ell(w)}$ because $c_{\lambda e} = 1$.
