/ ‘Class_Notes/2019/Lie Algebra/sections/2019-11-22.md’

--- a/Class_Notes/2019/Lie Algebra/sections/2019-11-22.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-11-22.md
@@ -55,7 +55,7 @@ $\qed$
 We also have $Z\actson M(\lambda)$ and any submodule or composition factor by the same scalar.
 
 *Example:*
-Let $\lieg = \liessl(2, \CC)$ and $\Omega = h^2 + 2h + fe \in Z$.
+Let $\lieg = \liesl(2, \CC)$ and $\Omega = h^2 + 2h + fe \in Z$.
 
 Take $\lambda \in \Lambda^+ \equiv \ZZ_{\geq 0}$ and $v^+ \in M(\lambda)_\lambda$.
 Then $\Omega.v^+ = (h^2 + 2h + fe)v^+ = (\lambda^2 + 2\lambda)v^+$, which means that $\chi_\lambda(\Omega) = \lambda(\lambda+2) \in \CC$.
