/ ‘Class_Notes/2019/Lie Algebra/sections/2019-11-25.md’

--- a/Class_Notes/2019/Lie Algebra/sections/2019-11-25.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-11-25.md
@@ -94,7 +94,7 @@ Then $\rank \lieg = \dim \lieh$ is well-defined by any CSA, since they are all c
 The *Engel subalgebra* $x\in \lieg$ of $\lieg$ is the generalized eigenspace of $\ad x$ with eigenvalue 0.
 We can then define $\lieg_{0, x} \definedas \theset{y\in\lieg \suchthat (\ad x)^n (y) = 0 \text{ for } n \gg 0}$.
 
-An element $\x\in\lieg$ is *regular* if $\dim \lieg_{0, x}$ is minimal.
+An element $x\in\lieg$ is *regular* if $\dim \lieg_{0, x}$ is minimal.
 
 Some facts:
 
