/ ‘Class_Notes/2019/Lie Algebra/sections/2019-11-25.md’

--- a/Class_Notes/2019/Lie Algebra/sections/2019-11-25.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-11-25.md
@@ -143,6 +143,4 @@ $\lieh$ is abelian and thus nilpotent, so $\lieg = \lieh + \sum_\alpha \lieg_\al
 Thus $N_\lieg(\lieh)$.
 
 $\impliedby$:
-Next time
-
-
+Next time.
