--- a/Class_Notes/2019/Lie Algebra/sections/2019-11-25.md
+++ b/Class_Notes/2019/Lie Algebra/sections/2019-11-25.md
@@ -132,7 +132,7 @@ Then suppose that $\lieh \not\in \lieg_{0, x}$ for all $x\in\lieh$.
 So pick $z\in \lieh$ such that $\dim \lieg_{0, z} \leq \dim \lieg_{0, x}$ for all $x\in \lieh$.
 Then $\lieg_{0, z} \subseteq \lieg_{0, x}$ for all $x\in \lieh$.
 This implies that $x\in \lieh \actson  \lieg{0, z} / \lieh$ is a nilpotent action (where this quotient is nonzero).
-By Theorem 3.3, there exists a $y+\lieh \neq \lie$ such that $\ad \lieh(y+\lieh) = \lieh$, or there exists a $y\not\in\lieh$ such that $[\lieh, y] \subseteq \lieh$
+By Theorem 3.3, there exists a $y+\lieh \neq \lieg$ such that $\ad \lieh(y+\lieh) = \lieh$, or there exists a $y\not\in\lieh$ such that $[\lieh, y] \subseteq \lieh$
 with $\lieh = N_\lieg(\lieh)$.
 $\qed$
 
