/ ‘Class_Notes/2019/Algebra/sections/2019-11-26.md’

--- a/Class_Notes/2019/Algebra/sections/2019-11-26.md
+++ b/Class_Notes/2019/Algebra/sections/2019-11-26.md
@@ -1,4 +1,17 @@
 # Tuesday November 26th
 
-Theorem (Cayley Hamilton):
-If $p$ is the minimal polynomial of a linear transformation $\phi$, then $p(\phi) = 0$.
+Theorem
+
+b. If $p$ is the minimal polynomial of a linear transformation $\phi$, then $p(\phi) = 0$
+c. For any $f(x) \in k[x]$ that is irreducible, $f(x) \divides p_\phi(x) \iff f(x) \divides q_\phi(x)$.
+
+
+Proof:
+
+Proof of (a):
+
+Proof of (b):
+
+Proof of (c):
+
+Proof of (a):
