/ ‘Class_Notes/2019/Algebra/sections/2019-11-26.md’

--- a/Class_Notes/2019/Algebra/sections/2019-11-26.md
+++ b/Class_Notes/2019/Algebra/sections/2019-11-26.md
@@ -1,8 +1,9 @@
 # Tuesday November 26th
 
-Theorem
+**Theorem**
 
-b. If $p$ is the minimal polynomial of a linear transformation $\phi$, then $p(\phi) = 0$
+a. ?
+b. (Cayley Hamilton) If $p$ is the minimal polynomial of a linear transformation $\phi$, then $p(\phi) = 0$
 c. For any $f(x) \in k[x]$ that is irreducible, $f(x) \divides p_\phi(x) \iff f(x) \divides q_\phi(x)$.
 
 
@@ -12,6 +13,8 @@ Proof of (a):
 
 Proof of (b):
 
-Proof of (c):
+If $q_\phi(x) \divides p_\phi(x)$ and $q_\phi(\phi) = 0$, then $p_\phi(\phi) = 0$ as well.
 
-Proof of (a):
+Proof of (c):
+We have $f(x) \divides q_\phi(x) \implies f(x) \divides p_\phi(x)$ and $f(x) \divides p_\phi(x) \implies f(x) \divides q_i(x)$ for some $i$, and so $f(x) \divides q_\phi(x)$.
+
