/ ‘Class_Notes/2019/Algebra/sections/2019-11-26.md’

--- a/Class_Notes/2019/Algebra/sections/2019-11-26.md
+++ b/Class_Notes/2019/Algebra/sections/2019-11-26.md
@@ -1,5 +1,7 @@
 # Tuesday November 26th
 
+## Minimal and Characteristic Polynomials
+
 **Theorem**
 
 a. ?
@@ -18,3 +20,13 @@ If $q_\phi(x) \divides p_\phi(x)$ and $q_\phi(\phi) = 0$, then $p_\phi(\phi) = 0
 Proof of (c):
 We have $f(x) \divides q_\phi(x) \implies f(x) \divides p_\phi(x)$ and $f(x) \divides p_\phi(x) \implies f(x) \divides q_i(x)$ for some $i$, and so $f(x) \divides q_\phi(x)$.
 
+## Eigenvalues and Eigenvectors
+
+Definition:
+Let $\phi: V\to V$ be a linear transformation. Then
+
+1. An *eigenvector* is a vector $\vector v = \vector 0$ such that $\phi(\vector v) = \lambda \vector v$ for some $\lambda \in k$.
+2. If such a $\vector v$ exists, then $\lambda$ is called an *eigenvalue* of $\phi$.
+
+Theorem:
+The eigenvalues of $\phi$ are the roots of $p_\phi(x)$ in $k$.
