/ ‘Class_Notes/2019/Algebra/sections/2019-11-26.md’

--- a/Class_Notes/2019/Algebra/sections/2019-11-26.md
+++ b/Class_Notes/2019/Algebra/sections/2019-11-26.md
@@ -28,5 +28,5 @@ Let $\phi: V\to V$ be a linear transformation. Then
 1. An *eigenvector* is a vector $\vector v = \vector 0$ such that $\phi(\vector v) = \lambda \vector v$ for some $\lambda \in k$.
 2. If such a $\vector v$ exists, then $\lambda$ is called an *eigenvalue* of $\phi$.
 
-Theorem:
+**Theorem:**
 The eigenvalues of $\phi$ are the roots of $p_\phi(x)$ in $k$.
