--- a/Class_Notes/2019/Algebra/sections/2019-11-26.md
+++ b/Class_Notes/2019/Algebra/sections/2019-11-26.md
@@ -30,3 +30,11 @@ Let $\phi: V\to V$ be a linear transformation. Then
 
 **Theorem:**
 The eigenvalues of $\phi$ are the roots of $p_\phi(x)$ in $k$.
+
+*Proof:*
+Let $[\phi]_B = A$, then $p_A(\lambda) = p_\phi(\lambda) = \det(\lambda I - A) = 0$
+- $iff \exists \vector v\neq \vector 0$ such that $(\lambda I - A)\vector v = \vector 0$
+- $\iff \lambda I\vector v = A \vector v$
+- $\iff A\vector v = \lambda \vector v$
+- $\iff$ $\lambda$ is an eigenvalue and $\vector v$ is an eigenvector.
+
