/ ‘Class_Notes/2019/Analysis/sections/2019-11-26.md’

--- a/Class_Notes/2019/Analysis/sections/2019-11-26.md
+++ b/Class_Notes/2019/Analysis/sections/2019-11-26.md
@@ -1,3 +1,6 @@
 # Tuesday November 26th
 
+Question:
+Let $f\in L^1([0, 1])$ and $F(x) = \int_a^x f(y) ~dy$ -- is $F$ differentiable a.e. and $F' = f$?
+
 
