/ ‘Class_Notes/2019/Analysis/sections/2019-11-26.md’

--- a/Class_Notes/2019/Analysis/sections/2019-11-26.md
+++ b/Class_Notes/2019/Analysis/sections/2019-11-26.md
@@ -3,4 +3,14 @@
 Question:
 Let $f\in L^1([0, 1])$ and $F(x) = \int_a^x f(y) ~dy$ -- is $F$ differentiable a.e. and $F' = f$?
 
+If $f$ is continuous, then absolutely yes.
 
+Otherwise, we are considering 
+$$
+\frac{f(x+h) - F(x)}{h} = \frac{1}{h} \int_x^{x+h} f(y)~dy \to_? f(x)
+$$
+
+so the more general question is
+$$
+\lim_{m(I) \to 0, x\in I} \frac{1}{m(I)} \int_I f(y) ~dy =_? f(x) ~a.e.
+$$
