/ ‘Class_Notes/2019/Analysis/sections/2019-11-26.md’

--- a/Class_Notes/2019/Analysis/sections/2019-11-26.md
+++ b/Class_Notes/2019/Analysis/sections/2019-11-26.md
@@ -1,7 +1,7 @@
 # Tuesday November 26th
 
 Question:
-Let $f\in L^1([0, 1])$ and $F(x) = \int_a^x f(y) ~dy$ -- is $F$ differentiable a.e. and $F' = f$?
+Let $f\in L^1([a, b])$ and $F(x) = \int_a^x f(y) ~dy$ -- is $F$ differentiable a.e. and $F' = f$?
 
 If $f$ is continuous, then absolutely yes.
 
@@ -13,4 +13,29 @@ $$
 so the more general question is
 $$
 \lim_{m(I) \to 0, x\in I} \frac{1}{m(I)} \int_I f(y) ~dy =_? f(x) ~a.e.
+$$
+
+Note that if $f$ is continuous, since $[a, b]$ is compact, we have uniform continuity and $\frac{1}{m(I)} \int_I (f(y) - f(x)) ~dy < \frac{1}{m(I)} \int_I \varepsilon$.
+
+## Lebesgue Differentiation Theorem
+
+**Theorem:**
+If $f\in L^1(\RR^n)$ then
+$$
+\lim_{m(B) \to 0, x\in B} \int \frac{1}{m(B)} \int_B f(y)~dy = f(x)~a.e.
+$$
+> Note: although it's not obvious at first glance, this really is a theorem about differentiation.
+
+**Corollary (Lebesgue Density Theorem):**
+For any measurable set $E \subseteq \RR^n$, we have
+$$
+\lim_{r\to 0} \frac{m(E\intersect B_r(x))}{m(B_r(x))} = 1 ~a.e.
+$$
+*Proof:*
+Let $f = \chi_E$ in the theorem.
+
+Proof of theorem:
+We want to show 
+$$
+Df(x) \definedas \limsup_{m(B) \to 0, x\in B} \abs{\frac{1}{m(B)} \int_B (f(y) - f(x))~dy  } \to 0
 $$
