/ ‘Class_Notes/2019/Analysis/sections/2019-11-26.md’

--- a/Class_Notes/2019/Analysis/sections/2019-11-26.md
+++ b/Class_Notes/2019/Analysis/sections/2019-11-26.md
@@ -39,3 +39,67 @@ We want to show
 $$
 Df(x) \definedas \limsup_{m(B) \to 0, x\in B} \abs{\frac{1}{m(B)} \int_B (f(y) - f(x))~dy  } \to 0
 $$
+Note that we can replace the $\limsup$ with $\lim_{\varepsilon \to 0} \sup_{0\leq m(B) \leq \varepsilon, x\in B}$,
+which is well defined as it is a decreasing sequence of numbers bounded below by zero.
+
+Next we'll introduce that *Hardy-Littlewood Maximal Function*, given by 
+$$
+Mf(x) = \sup_{x\in B} \frac{1}{m(B)} \int_B \abs{f(y)} ~dy
+$$
+> Exercise: show that this is a measurable function. (Hint: it's easy to show that the appropriate preimage is open.)
+
+**Theorem (Maximal Function Theorem):**
+Let $f\in L^1(\RR^n)$, then 
+$$
+m({ x\in \RR^n \suchthat Mf(x) > \alpha  }) \leq \frac{3^n}{\alpha} \norm{f}_1.
+$$
+
+> Idea: if you look at all balls intersecting a given ball of radius $\alpha$, the worst case is that the other ball doesn't intersect and is of the same radius. But then you can draw a ball of radius $3\alpha$ and cover every such intersecting ball.
+
+> Exercise: As a corollary, $Mf(x) < \infty~a.e.$
+
+This is called a *weak type* estimate, compared to a strong type $\norm{Mf}_1 \leq C \norm{f}_1$. 
+Note that by Chebyshev, a strong estimate would imply the weak one because
+$$
+m(\theset{x \suchthat mf(x) > \alpha}) \leq \frac{1}{\alpha} \norm{Mf}_1 \not\leq \frac{C}{\alpha} \norm{f}_1,
+$$
+
+which is an inequality that doesn't hold (hence the theorem) because there is an $L^1$ function for which $Mf$ is *not* $L^1$.
+
+*Proof of differentiation theorem:*
+The goal is to show $Df(x) = 0$ a.e.
+
+We will show that $m(\theset{x\suchthat Df(x) > \alpha}) = 0$ for all $\alpha > 0$.
+
+Some facts:
+
+1. If $g$ is continuous, then $Dg(x) = 0$ a.e. by uniform convergence.
+2. $D(f_1 + f_2)(x) \leq Df_1(x) + Df_2(x)$ by applying the triangle inequality and distributing the $\limsup$.
+3. $Df(x) \leq Mf(x) + \abs{f(x)}$
+
+Fix an $\alpha$ and fix an $\varepsilon$.
+Choose a continuous $g$ such that $\norm{f-g}_1 < \varepsilon$.
+Writing $f=f-g+g$, we have
+
+\begin{align*}
+Df(x) 
+&\leq D(f-g)(x) + Dg(x) \\
+&=D(f-g)(x) + 0 \\
+&\leq M(f-g)(x) + \abs{(f-g)(x)}.
+,\end{align*}
+
+Then $Df(x) \geq \alpha \implies M(f-g)(x) \geq \frac{\alpha}{2}$ or $\abs{(f-g)(x)} \geq \frac{\alpha}{2}$.
+So we have $\theset{x\suchthat Df(x) > \alpha} \subseteq \theset{x\suchthat M(f-g)(x) > \frac\alpha 2} \union \theset{x\suchthat \abs{f(x) - g(x)} > \frac\alpha 2}$.
+Applying measures turns this into an inequality.
+
+But then applying the maximal function theorem, we have
+
+\begin{align*}
+m(\theset{x\suchthat Df(x) > \alpha}) 
+&\leq \frac{3^n}{\alpha/2} \norm{f-g}_1 + \frac 2 \alpha \norm{f-g}_1 \\
+&\leq \varepsilon (\frac{2(3^n + 1)}{\alpha})
+.\end{align*}
+
+$\qed$
+
+
