/ ‘Class_Notes/2019/Analysis/sections/2019-11-26.md’

--- a/Class_Notes/2019/Analysis/sections/2019-11-26.md
+++ b/Class_Notes/2019/Analysis/sections/2019-11-26.md
@@ -48,7 +48,7 @@ Mf(x) = \sup_{x\in B} \frac{1}{m(B)} \int_B \abs{f(y)} ~dy
 $$
 > Exercise: show that this is a measurable function. (Hint: it's easy to show that the appropriate preimage is open.)
 
-**Theorem (Maximal Function Theorem):**
+**Theorem (Hardy-Littlewood Maximal Function Theorem):**
 Let $f\in L^1(\RR^n)$, then 
 $$
 m({ x\in \RR^n \suchthat Mf(x) > \alpha  }) \leq \frac{3^n}{\alpha} \norm{f}_1.
@@ -102,4 +102,8 @@ m(\theset{x\suchthat Df(x) > \alpha})
 
 $\qed$
 
+> Note that somehow proving the maximal function theorem here really paved the way, and allows some generalization. Here we computed an average over a solid ball, but there is a notion of surface measure, so we can consider averaging over the surface of spheres, which can include more exotic objects like spheres in $\ZZ^d$.
 
+*Proof of HL Maximal Function Theorem:*
+Let $E_\alpha =\theset{x\suchthat Mf(x) > \alpha}$.
+If $x\in E_\alpha$, then it follows that there is a $B_x$ such that $\frac{1}{m(B_x)} \int_{B_x} \abs{f(y)} ~dy > \alpha \iff m(B_x) < \frac 1 \alpha \int_{B_x} \abs{f(y)} ~dy$.
