/ ‘Class_Notes/2019/Analysis/sections/2019-11-26.md’

--- a/Class_Notes/2019/Analysis/sections/2019-11-26.md
+++ b/Class_Notes/2019/Analysis/sections/2019-11-26.md
@@ -107,3 +107,7 @@ $\qed$
 *Proof of HL Maximal Function Theorem:*
 Let $E_\alpha =\theset{x\suchthat Mf(x) > \alpha}$.
 If $x\in E_\alpha$, then it follows that there is a $B_x$ such that $\frac{1}{m(B_x)} \int_{B_x} \abs{f(y)} ~dy > \alpha \iff m(B_x) < \frac 1 \alpha \int_{B_x} \abs{f(y)} ~dy$.
+
+Note that if $E_\alpha$ were compact, there would only be finitely many such balls, so let $K \subseteq E_\alpha$ be a compact subset.
+We will be done if we can show that $m(K) < \frac{3^n}{\alpha} \norm{f}_1$, since we can always find a compact $K$ such that $m(E_\alpha\setminus K)$ is small.
+
