--- a/Class_Notes/2019/Analysis/sections/2019-11-26.md
+++ b/Class_Notes/2019/Analysis/sections/2019-11-26.md
@@ -111,3 +111,15 @@ If $x\in E_\alpha$, then it follows that there is a $B_x$ such that $\frac{1}{m(
 Note that if $E_\alpha$ were compact, there would only be finitely many such balls, so let $K \subseteq E_\alpha$ be a compact subset.
 We will be done if we can show that $m(K) < \frac{3^n}{\alpha} \norm{f}_1$, since we can always find a compact $K$ such that $m(E_\alpha\setminus K)$ is small.
 
+There exists a finite collection $\theset{B_k}^N$ such that each $B_k = B_x$ for some $x\in E_\alpha$, $K \subseteq \union B_k$, and $m(B_k) \leq \frac{1}{\alpha} \int_{B_k} \abs{f(y)}~dy$.
+Supposing that the $B_k$ were disjoint (which they are not!), then we would be done because 
+
+
+\begin{align*}
+m(K) 
+&\leq \sum m(B_k) \\
+&\leq \frac{1}{\alpha} \sum \int_{B_k} \abs{f(y)} ~dy \\
+&\leq \frac{1}{\alpha} \int_{\RR^n} \abs{f(y)}
+.\end{align*}
+
+
