/ ‘Class_Notes/2019/Analysis/sections/2019-11-26.md’

--- a/Class_Notes/2019/Analysis/sections/2019-11-26.md
+++ b/Class_Notes/2019/Analysis/sections/2019-11-26.md
@@ -122,4 +122,12 @@ m(K)
 &\leq \frac{1}{\alpha} \int_{\RR^n} \abs{f(y)}
 .\end{align*}
 
+*Lemma (The Vitali Covering Lemma):*
+Given any collection of balls $B_1, \cdots, B_N$, there exists a sub-collection $A_1, \cdots, A_M$ which are disjoint with $m(\union^N B_k) \leq 3^n \sum^M m(A_j)$.
+
+> Note that this follows directly from picking the largest ball first, then picking further balls that avoid everything already picked and are chosen in decreasing order of size. The $3^n$ factor comes from the earlier fact that tripling the radius covers everything you didn't pick.
+
+But now we can replace $B_k$ with such a sub-collection $A_k$ in the above set of inequalities, which proves the theorem.
+$\qed$.
+
 
