/ ‘Archive/Number Theory/2017-11-15.md’

--- a/Archive/Number Theory/2017-11-15.md
+++ b/Archive/Number Theory/2017-11-15.md
@@ -1,23 +1,25 @@
-# Fermat's Last Theorem
+# November 11th
+
+## Fermat's Last Theorem
 
 First case, due to Kumar. Here's what we'll show:
 
-**Theorem:** Take a prime $p > 3$, assume $p$ is *regular* (i.e. $p\not\mid h_{\QQ(\zeta_p)}$the class number). Then $x^p + y^p = z^p \implies xyz = 0 \mod p$.
+**Theorem:** 
+Take a prime $p > 3$, assume $p$ is *regular* (i.e. $p\not\mid h_{\QQ(\zeta_p)}$the class number). Then $x^p + y^p = z^p \implies xyz = 0 \mod p$.
 
-Krummer's Criterion: $p$ is irregular (so $p \mid h_{\QQ(\zeta_p)})$ iff $\text{ord}_p(B_k) > 0$ for some $k = 2,3,\cdots p-3$, where $B_k$ is a Bernoulli Number. 
+**Krummer's Criterion:** 
+$p$ is irregular (so $p \mid h_{\QQ(\zeta_p)})$ iff $\text{ord}_p(B_k) > 0$ for some $k = 2,3,\cdots p-3$, where $B_k$ is a Bernoulli Number. 
 $\frac{z}{e^z-1} = \sum_{n=0}^\infty B_n \frac{z^n}{n!}, \abs{z} < 2\pi$.
 
 Infinitely many irregular - known, 39%
 
 Infinitely many regular - open, 61%
 
+**Herbrand-Ribet:** 
 
-
-Herbrand-Ribet: $A = \text{Cl}_{\QQ(\zeta_p)}, C = A/A^p$ is an $\FF_p$ vector space where $C = 0 \iff p \not\mid h$.
+$A = \text{Cl}_{\QQ(\zeta_p)}, C = A/A^p$ is an $\FF_p$ vector space where $C = 0 \iff p \not\mid h$.
 
 $G = \text{Gal}(\QQ(\zeta_p) / \QQ) \cong (\ZZ/p\ZZ)^\times$ is cyclic, so its dual group is also cyclic $\hat G = <x>$ where $X \cdot G \into \FF_p^\times$ is the cyclotomic character $X(\sigma) = [a]$ if $\sigma(\zeta_p) = \zeta_p^a$.
-
-
 
 So fix an even $2 \leq k \leq p-3$. Then $\text{ord}_p(B_k) > 0$ $\iff$ $C(X^{1-k}) \neq 0$. (Only known to be iff this past century!)
 Was known assuming Vandiver's conjecture: $p\not\mid h_{\QQ(\zeta_p + \zeta_p^{-1})}$. Ribet was able to bypass using Galois representations associated to modular forms. Under this assumption, create a cusp form congruent to an Eisenstein series$\mod p$. Move back into Galois side to recover nontriviality on RHS.
