/ ‘Archive/Combinatorics/Review.pdf’ / ‘Archive/Combinatorics/Review.tex’ / ‘Archive/Combinatorics/Review.toc’ / ‘pdfs/Review.pdf’ / ‘pdfs/Review.synctex.gz’

--- a/Archive/Combinatorics/Review.tex
+++ b/Archive/Combinatorics/Review.tex
@@ -936,63 +936,63 @@ EGF\strut
 \midrule
 \endhead
 \begin{minipage}[t]{0.30\columnwidth}\raggedright
-\(a_n = \indicator{n=k}\)\strut
+\(a_n = \indic{n=k}\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(x^k\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\frac{x^k}{k!}\)\strut
 \end{minipage}\tabularnewline
 \begin{minipage}[t]{0.30\columnwidth}\raggedright
-\(a_n = \indicator{n \geq 0} (\NN)\)\strut
+\(a_n = \indic{n \geq 0} (\NN)\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\frac 1 {1-x}\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(e^x\)\strut
 \end{minipage}\tabularnewline
 \begin{minipage}[t]{0.30\columnwidth}\raggedright
-\(a_n = \indicator{n \geq 1} (\NN_{\geq 1})\)\strut
+\(a_n = \indic{n \geq 1} (\NN_{\geq 1})\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\frac x {1-x}\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(e^x - 1\)\strut
 \end{minipage}\tabularnewline
 \begin{minipage}[t]{0.30\columnwidth}\raggedright
-\(a_n = \indicator{n \geq 2} (\NN_{\geq 2})\)\strut
+\(a_n = \indic{n \geq 2} (\NN_{\geq 2})\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\frac {x^2} {1-x}\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(e^x - 1 - x\)\strut
 \end{minipage}\tabularnewline
 \begin{minipage}[t]{0.30\columnwidth}\raggedright
-\(a_n = \indicator{n \geq k}\)\strut
+\(a_n = \indic{n \geq k}\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\frac {x^k} {1-x}\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(e^x - \displaystyle\sum_{n=0}^k \frac{x^n}{n!} =\displaystyle\sum_{n=k+1}^\infty \frac{x^n}{n!}\)\strut
 \end{minipage}\tabularnewline
 \begin{minipage}[t]{0.30\columnwidth}\raggedright
-\(a_n = \indicator{n \leq k}\)\strut
+\(a_n = \indic{n \leq k}\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(1+x+x^2+\cdots +x^k\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(1 + x + \frac{x^2}{2} + \cdots +\frac{x^k}{k!}\)\strut
 \end{minipage}\tabularnewline
 \begin{minipage}[t]{0.30\columnwidth}\raggedright
-\(a_n = \indicator{n\text{ even}}\)\strut
+\(a_n = \indic{n\text{ even}}\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\frac{1}{1-x^2}\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\cosh(x)\)\strut
 \end{minipage}\tabularnewline
 \begin{minipage}[t]{0.30\columnwidth}\raggedright
-\(a_n = \indicator{n\text{ odd}}\)\strut
+\(a_n = \indic{n\text{ odd}}\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\frac{x}{1-x^2}\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\sinh(x)\)\strut
 \end{minipage}\tabularnewline
 \begin{minipage}[t]{0.30\columnwidth}\raggedright
-\(a_n = \indicator{n = k, k^2, \cdots}\)\strut
+\(a_n = \indic{n = k, k^2, \cdots}\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\frac 1 {1-x^k}\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
@@ -1953,9 +1953,9 @@ Some examples:
 \tightlist
 \item
   The indicator/``dirac delta'' function:
-  \(\delta(x,y) = \indicator{x=y}\)
+  \(\delta(x,y) = \indic{x=y}\)
 \item
-  The zeta function: \(\zeta(x,y) = \indicator{x \leq y}\)
+  The zeta function: \(\zeta(x,y) = \indic{x \leq y}\)
 \end{itemize}
 
 This is an \emph{algebra} because it is a vector space over \(\RR\), and
