--- a/Class_Notes/2019/Analysis/sections/2019-08-15.md
+++ b/Class_Notes/2019/Analysis/sections/2019-08-15.md
@@ -2613,9 +2613,9 @@ TFAE?
 - $\lim_{N\to\infty} \norm{ x - \sum_n^N \inner{x}{u_n}  } = 0$, i.e. the Fourier series converges in $H$.
 
 Recall the Riesz-Fischer theorem: if $\theset u_n$ is orthonormal in $H$ and $\theset a_n \in \ell^2(\NN)$, then $\exists x\in H$ such that $a_n = \inner{x}{u_n}$ and $\norm{x}^2 = \sum_n \abs{a_n}^2$.
-Moreover, the map $x \mapsto \hat{x}(u) \coloneqq \inner{x}{u_n}$ maps $H$ onto $\ell^2 \NN$ surjectively.
+Moreover, the map $x \mapsto \hat{x}(u) \coloneqq \inner{x}{u_n}$ maps $H$ onto $\ell^2(\NN)$ surjectively.
 
-> Remark: This $x$ is only unique if $\theset u_n$ is *complete*, i.e. $\inner{y}{u_n} = 0 \forall n \implies y = 0$.
+> Remark: This $x$ is only unique if $\theset u_n$ is *complete*, i.e. $\inner{y}{u_n} = 0 \quad \forall n \implies y = 0$.
 
 Proof;
 Let $S_N \coloneqq \sum_{n=1}^N a_n u_n$. 
@@ -2632,7 +2632,10 @@ since $\sum \abs{a_n} < \infty$ implies that the sum is Cauchy.
 Since $H$ is complete, $S_N \to x$ for some $x\in H$.
 We now need to argue that $a_n = \inner{x}{u_n}$
 
-If $N$ is large enough, in particular $N \geq n$, then we have the identity $\abs{\inner{x}{u_n} - a_n} = \abs{\inner{x}{u_n} - \inner{S_N}{u_n}  } = \abs{ \inner{x - S_N}{u_n} } \leq \norm{x - S_N} \to 0$.
+If $N$ is large enough, in particular $N \geq n$, then we have the identity 
+$$
+\abs{\inner{x}{u_n} - a_n} = \abs{\inner{x}{u_n} - \inner{S_N}{u_n}  } = \abs{ \inner{x - S_N}{u_n} } \leq \norm{x - S_N} \to 0.
+$$
 
 > Note: should be able to translate this to statements about epsilons almost immediately!
 
