--- a/Class_Notes/2019/Algebra/sections/2019-10-08.md
+++ b/Class_Notes/2019/Algebra/sections/2019-10-08.md
@@ -212,4 +212,5 @@ $K \geq E \geq F$ where
 $$
 K = \QQ(\sqrt[3] 3, \zeta_3)\quad E = \QQ(\sqrt[3] 3) \quad F = \QQ
 .$$
-Then $K \normal E$ and $K\normal F$, but $E \ntrianglelefteq F$.
+Then $K \normal E$ and $K\normal F$, since $\Gal(K/F) = S_3$ and $\Gal(K/E) = \ZZ_2$. 
+But $E \ntrianglelefteq F$, since $\ZZ_2 \ntrianglelefteq S_3$.
