--- a/Class_Notes/2019/Algebra/sections/2019-10-22.md
+++ b/Class_Notes/2019/Algebra/sections/2019-10-22.md
@@ -60,9 +60,10 @@ s_n &= \prod_i y_i
 .\end{align*}
 
 
-Then $\QQ(y_1, \cdots, y_n)/ \QQ(s_1, \cdots, s_n) = S_n$ (by previous theorem).
-For $n\geq 5$, $A_n$ is not solvable, and thus neither is $S_n$.
-Thus the polynomial is not solvable by radical, since the splitting field of $f(x)$ is $\QQ(y_1, \cdots, y_n)$. $\qed$
+Then $\QQ(y_1, \cdots, y_n)/ \QQ(s_1, \cdots, s_n)$ would be a normal extension precisely if $A_n \normal S_n$ (by previous theorem).
+For $n\geq 5$, $A_n$ is simple, and thus $S_n$ is not solvable in this range.
+
+Thus the polynomial is not solvable by radicals, since the splitting field of $f(x)$ is $\QQ(y_1, \cdots, y_n)$. $\qed$
 
 ## Rings and Modules
 
