--- a/Class_Notes/2019/Algebra/sections/2019-10-29.md
+++ b/Class_Notes/2019/Algebra/sections/2019-10-29.md
@@ -4,10 +4,15 @@
 
 **Lemma (Short Five):**
 
-Let $R$ be a ring, then if we have the following diagram:
+Consider a diagram of the following form:
 
-where
-<!-- Todo -->
+```{=latex}
+\begin{tikzcd}
+0 \arrow[r] & M \arrow[dd, "\alpha"] \arrow[r, "f"] & N \arrow[dd, "\beta"] \arrow[r, "g"] & Q \arrow[dd, "\gamma"] \arrow[r] & 0 \\
+&                                       &                                      &                                  &   \\
+0 \arrow[r] & M' \arrow[r, "f'"]                    & N' \arrow[r, "g'"]                   & Q' \arrow[r]                     & 0
+\end{tikzcd}
+```
 
 1. $\alpha, \gamma$ monomorphisms implies $\beta$ is a monomorphism.
 
@@ -15,8 +20,22 @@ where
 
 3. $\alpha, \gamma$ isomorphisms implies $\beta$ is an isomorphism.
 
+Moreover, (1) and (2) together imply (3).
+
 *Proof:*
 Exercise.
+
+*Example proof of (2)*:
+Suppose $\alpha, \gamma$ are monomorphisms.
+
+- Let $n\in N$ with $\beta(n) = 0$, then $g' \circ \beta(n) = 0$.
+- $\implies \gamma \circ g (n) = 0$.
+- $\implies g(n) = 0$
+- $\implies \exists m\in M$ such that $f(m) = n$
+- $\implies \beta \circ f (m) = \beta(n)$
+- $\implies f' \alpha(m) = \beta (n) = 0$
+- $\implies \alpha(m) = 0$
+- $\implies f'$ is injective, so $m=0$ and $n=f(m) = 0$.
 
 $\qed$
 
