--- a/Class_Notes/2019/Algebra/sections/2019-11-26.md
+++ b/Class_Notes/2019/Algebra/sections/2019-11-26.md
@@ -6,7 +6,7 @@
 
 a. ? (Todo)
 
-b. (Cayley Hamilton) If $p$ is the minimal polynomial of a linear transformation $\phi$, then $p(\phi) = 0$
+b. **(Cayley Hamilton)** If $p$ is the minimal polynomial of a linear transformation $\phi$, then $p(\phi) = 0$
 
 c. For any $f(x) \in k[x]$ that is irreducible, $f(x) \divides p_\phi(x) \iff f(x) \divides q_\phi(x)$.
 
